# openclaw-mission-control

./: README.md  axzora.py  compose.yml  demo_start.ps1  demo_start.sh  setup_mr_happy_voice_assistant.ps1
axzora-ai/: start_axzora.py
axzora-ai/gateway/: api_gateway.py  gateway.env
axzora-ai/mission-control/: dashboard.html
axzora-ai/mr-happy/: autonomous_agent.py  brain.py  trip_planner.py  voice.py  voice_integrated.py  wake_word.py
axzora-ai/tools/: web_search.py
backend/: pyproject.toml
backend/app/: __init__.py
backend/scripts/: init_sqlite_db.py
docs/: README.md  openclaw_baseline_config.md  openclaw_gateway_ws.md
frontend/: next.config.ts
frontend/public/: axzora-dashboard.html
scripts/: auto_git_connect.py  create_ceo_task.py  create_local_user.py  mr_happy_commander.py  project_satyug_analysis.py  simple_mr_happy_test.py  simple_whatsapp_briefing.py  system_verification.py  test_gateway.py  whatsapp_ceo_briefing.py  whatsapp_commands.py
skills/: agent_services.py  automation_workflows.py  autonomous_agent.py  axzora_skills.json  axzora_voice.py  cricket_news_20260306.md  mr_happy_army.py  mr_happy_voice_fixed.py  openfang_bridge.py  setup_skills.py  skill_webhooks_mapping.json  super_agents.py  super_agents_api.py  system_monitor.py  task_scheduler.py  whatsapp_bridge_service.py
skills/agent-device/: SKILL.md
skills/reports/: hp_daily_20260306.md
skills/saas-mvp-launcher/test-saas/backend/: Dockerfile  pyproject.toml
skills/saas-mvp-launcher/test-saas/backend/app/: main.py
super_app/: architecture.md
super_app/backend/: main.py
(+60 files in other folders)
